--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,13 @@
 <template>
-  <ul repeat.for="nav of router.navigation">
-    <li class="${nav.isActive ? 'active' : ''}"><a href.bind="nav.href">${nav.title}</a></li>
-  </ul>
-  <router-view></router-view>
+  <require from="resources/elements/navigation"></require>
+  <require from="resources/elements/header"></require>
+  <header title.bind="currentSiteTitle"></header>
+  <navigation main-links.bind="router.navigation"></navigation>
+  <div class="background">
+
+    <div class="background__content">
+   
+      <router-view></router-view> 
+    </div>
+  </div>
 </template>
