header new fitings

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
   <require from="resources/elements/navigation"></require>
   <require from="resources/elements/header"></require>
 
-  <header title.bind="currentSiteTitle"></header>
+  <header title.bind="currentSiteTitle" subtitle.bind="currentSiteSubtitle"></header>
   <div class="background">
     <navigation main-links.bind="router.navigation"></navigation>
 
