--- a/src/resources/elements/header.html
+++ b/src/resources/elements/header.html
@@ -1,6 +1,6 @@
 <template>
-  <div class="header">
-    <h1 class="header__title">TISCHLER</h1>
-    <p class="header__subtitle">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.</p>
+  <div class="header ${subtitle ? '' : 'header--smaller'}">
+    <h1 class="header__title ${subtitle ? '' : 'header__title--smaller'}">${title}</h1>
+    <p class="header__subtitle">${subtitle}</p>
   </div>
 </template>
