--- a/src/resources/elements/navigation.html
+++ b/src/resources/elements/navigation.html
@@ -7,7 +7,7 @@
           <a class="navlinks-main__nav-a" href.bind="mainLink.href">${mainLink.title}</a>
         </li>
       </ul>
-      <hr class="navigation__hr">
+      <div class="navigation__hr"></div>
       <ul class="navlinks-sub">
         <li class="navlinks-sub__nav-li" repeat.for="subLink of subLinks" class="${nav.isActive ? 'active' : ''}">
           <a class="navlinks-sub__nav-a" href.bind="nav.href">${subLink}</a>
