--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 
   <header title.bind="currentSiteTitle" subtitle.bind="currentSiteSubtitle"></header>
   <div class="background">
+    <div class="background__logo"></div>
     <navigation nav-open.two-way="navOpen" main-links.bind="router.navigation"></navigation>
 
     <div class="background__content">
