--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,3 +1,9 @@
 <template>
-  <h1>${message}</h1>
+  <div class="about" ref="aboutElement">
+    <div class="about-textblock" repeat.for="article of articles">
+      <img src="${article.img}" alt="" class="about-textblock__img" />
+      <h3 class="about-textblock__title">${article.title}</h3>
+      <p class="about-textblock__text">${article.text}</p>
+    </div>
+  </div>
 </template>
