--- a/src/resources/elements/navigation.html
+++ b/src/resources/elements/navigation.html
@@ -3,14 +3,24 @@
     <div class="navigation__nav ${navOpen ? 'navigation__nav--open' : ''}" ref="navbar">
       <div class="navigation__btn-close" click.trigger="closeNav($event)"></div>
       <ul class="navlinks-main">
-        <li class="navlinks-main__nav-li" repeat.for="mainLink of mainLinks" class="${nav.isActive ? 'active' : ''}">
+        <li
+          class="navlinks-main__nav-li"
+          repeat.for="mainLink of mainLinks"
+          if.bind="mainLink.config.main"
+          class="${nav.isActive ? 'active' : ''}"
+        >
           <a class="navlinks-main__nav-a" href.bind="mainLink.href">${mainLink.config.navtitle}</a>
         </li>
       </ul>
       <div class="navigation__hr"></div>
       <ul class="navlinks-sub">
-        <li class="navlinks-sub__nav-li" repeat.for="subLink of subLinks" class="${nav.isActive ? 'active' : ''}">
-          <a class="navlinks-sub__nav-a" href.bind="nav.href">${subLink}</a>
+        <li
+          class="navlinks-sub__nav-li"
+          repeat.for="mainLink of mainLinks"
+          if.bind="mainLink.config.sub"
+          class="${nav.isActive ? 'active' : ''}"
+        >
+          <a class="navlinks-sub__nav-a" href.bind="mainLink.href">${mainLink.config.navtitle}</a>
         </li>
       </ul>
     </div>
