--- a/src/subpages/datenschutz.html
+++ b/src/subpages/datenschutz.html
@@ -1,3 +1,9 @@
 <template>
-  <h1>${message}</h1>
+  <div class="datenschutz" ref="datenschutzElement">
+    <div class="datenschutz-textblock" repeat.for="article of articles">
+      <h3 class="datenschutz-textblock__title">${article.title}</h3>
+      <p class="datenschutz-textblock__text">${article.text}</p>
+    </div>
+  </div>
 </template>
+ 
