--- a/src/subpages/anfahrt.html
+++ b/src/subpages/anfahrt.html
@@ -1,3 +1,5 @@
 <template>
-  <h1>${message}</h1>
+  <div class="anfahrt">
+   <iframe class="anfahrt__map" src="${mapSrc}" allowfullscreen></iframe>
+  </div>
 </template>
