--- a/src/resources/elements/button-standard.html
+++ b/src/resources/elements/button-standard.html
@@ -1,5 +1,5 @@
 <template>
-  <button class="mdc-button mdc-button--outlined">
+  <button class="mdc-button mdc-button--outlined" click.trigger="formSubmit()">
     <div class="mdc-button__ripple"></div>
     <span class="mdc-button__label" ref="buttonDom">${text}</span>
   </button>
