--- a/src/resources/elements/input-email.html
+++ b/src/resources/elements/input-email.html
@@ -1,6 +1,6 @@
 <template>
-  <div class="mdc-text-field mdc-text-field--outlined" ref="inputTextDom">
-    <input type="text" id="tf-outlined-${label}" class="mdc-text-field__input" value.bind="value"/>
+  <div class="mdc-text-field mdc-text-field--outlined" ref="inputEmailDom">
+    <input type="email" id="tf-outlined-${label}" class="mdc-text-field__input" value.bind="value"/>
     <div class="mdc-notched-outline">
       <div class="mdc-notched-outline__leading"></div>
       <div class="mdc-notched-outline__notch">
