--- a/src/resources/elements/text-area.html
+++ b/src/resources/elements/text-area.html
@@ -1,6 +1,6 @@
 <template>
   <div class="mdc-text-field mdc-text-field--textarea" ref="textAreaDom">
-    <textarea id="textarea" class="mdc-text-field__input" rows="8" cols="40"></textarea>
+    <textarea id="textarea" class="mdc-text-field__input" rows="8" cols="40" value.bind="value"></textarea>
     <div class="mdc-notched-outline">
       <div class="mdc-notched-outline__leading"></div>
       <div class="mdc-notched-outline__notch">
