--- a/src/resources/elements/input-email.html
+++ b/src/resources/elements/input-email.html
@@ -1,6 +1,17 @@
 <template>
-  <div class="mdc-text-field mdc-text-field--outlined" ref="inputEmailDom">
-    <input type="email" id="tf-outlined-${label}" class="mdc-text-field__input" value.bind="value"/>
+  <div
+    class="mdc-text-field mdc-text-field--outlined ${error ? 'mdc-text-field--invalid' : ''}"
+    ref="inputEmailDom"
+  >
+    <input
+      type="email"
+      id="tf-outlined-${label}"
+      class="mdc-text-field__input"
+      value.bind="value"
+      aria-controls="email-helper-text"
+      aria-describedby="email-helper-text"
+      focus.trigger="resetErrors()"
+    />
     <div class="mdc-notched-outline">
       <div class="mdc-notched-outline__leading"></div>
       <div class="mdc-notched-outline__notch">
@@ -9,5 +20,12 @@
       <div class="mdc-notched-outline__trailing"></div>
     </div>
   </div>
+  <div class="mdc-text-field-helper-line error-helper-text ${error ? 'error-helper-text--visible' : 'error-helper-text--invisible'}">
+    <div
+      id="email-helper-text"
+      class="mdc-text-field-helper-text error-helper-text__text mdc-text-field-helper-text--persistent"
+    >
+      ${errorText}
+    </div>
+  </div>
 </template>
- 
