admin login base

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -23,6 +23,6 @@
       error.bind="textArea.error"
       error-text.bind="textArea.errorText"
     ></text-area>
-    <button-standard class="contact__btn" text.bind="buttonText"></button-standard>
+    <button-standard text.bind="buttonText" event.bind="buttonEvent"></button-standard>
   </form>
 </template>
