--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,6 +8,7 @@
     <input-text
       class="contact__input"
       value.two-way="inputName.value"
+      label.bind="inputName.label"
       error.bind="inputName.error"
       error-text.bind="inputName.errorText"
     ></input-text>
@@ -23,6 +24,9 @@
       error.bind="textArea.error"
       error-text.bind="textArea.errorText"
     ></text-area>
-    <button-standard text.bind="buttonText" event.bind="buttonEvent"></button-standard>
+    <button-standard
+      text.bind="buttonText"
+      event.bind="buttonEvent"
+    ></button-standard>
   </form>
 </template>
