--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,6 +6,7 @@
   <form class="login">
     <input-text
       class="login__input"
+      label.bind="inputName.label"
       value.two-way="inputName.value"
       error.bind="inputName.error"
       error-text.bind="inputName.errorText"
