--- a/src/resources/elements/input-password.html
+++ b/src/resources/elements/input-password.html
@@ -11,6 +11,7 @@
       aria-controls="password-helper-text"
       aria-describedby="password-helper-text"
       focus.trigger="resetErrors()"
+      autocomplete="current-password"
     />
     <div class="mdc-notched-outline">
       <div class="mdc-notched-outline__leading"></div>
