--- a/src/resources/elements/input-email.html
+++ b/src/resources/elements/input-email.html
@@ -11,6 +11,7 @@
       aria-controls="email-helper-text"
       aria-describedby="email-helper-text"
       focus.trigger="resetErrors()"
+      autocomplete="email"
     />
     <div class="mdc-notched-outline">
       <div class="mdc-notched-outline__leading"></div>
