--- a/src/resources/elements/input-text.html
+++ b/src/resources/elements/input-text.html
@@ -11,6 +11,7 @@
       aria-controls="username-helper-text"
       aria-describedby="username-helper-text"
       focus.trigger="resetErrors()"
+      autocomplete="name"
     />
     <div class="mdc-notched-outline">
       <div class="mdc-notched-outline__leading"></div>
