content from server

--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -5,8 +5,8 @@
       repeat.for="product of products"
       title.bind="product.title"
       img.bind="product.img"
-      bodytitle.bind="product.bodytitle"
-      bodytext.bind="product.bodytext"
+      bodytitle.bind="product.body_title"
+      bodytext.bind="product.body_text"
     >
     </product-card>
   </div>
