--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -23,6 +23,7 @@
       <text-area
         class="contact__input"
         value.two-way="textArea.value"
+        label.bind="Nachricht"
         error.bind="textArea.error"
         error-text.bind="textArea.errorText"
       ></text-area>
