--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,7 +1,10 @@
 <template>
+  <require from="resources/elements/edit-form"></require>
+
+  <edit-form contents.bind="articles"></edit-form>
   <div class="about" ref="aboutElement">
     <div class="about-textblock" repeat.for="article of articles">
-      <img src="${article.img}" alt="" class="about-textblock__img" />
+      <img src="${article.img}" alt="article image" class="about-textblock__img" />
       <h3 class="about-textblock__title">${article.title}</h3>
       <p class="about-textblock__text">${article.text}</p>
     </div>
