--- a/src/resources/elements/text-area.html
+++ b/src/resources/elements/text-area.html
@@ -16,7 +16,11 @@
     <div class="mdc-notched-outline">
       <div class="mdc-notched-outline__leading"></div>
       <div class="mdc-notched-outline__notch">
-        <label for="textarea" class="mdc-floating-label">${label}</label>
+        <label
+          for="textarea"
+          class="mdc-floating-label ${prefilled ? 'mdc-floating-label--float-above' : ''}"
+          >${label}</label
+        >
       </div>
       <div class="mdc-notched-outline__trailing"></div>
     </div>
