--- a/src/resources/elements/super-user.html
+++ b/src/resources/elements/super-user.html
@@ -1,11 +1,31 @@
 <template>
+  <require from="resources/elements/icon-button"></require>
+
   <div class="super-user">
     <span class="super-user__info"
       >Angemeldet als:
-      <span class="super_user__name-span">${username}</span></span
+      <span class="super-user__name-span">${username}</span></span
     >
-    <button click.trigger="logOut()">Logout</button>
-    <button click.trigger="startEdit()">${formOpen ? 'Close' : 'Edit'}</button>
-    <button class="${formOpen ? 'super-user__btn--show' : 'super-user__btn--hide'}" click.trigger="saveEdit()">Save</button>
+    <div class="super-user__btn-box">
+      <icon-button
+        class="${formOpen ?  'super-user__btn--hide': 'super-user__btn--show'}"
+        click.trigger="startEdit()"
+        icon.bind="btns.edit"
+      ></icon-button>
+      <icon-button
+        class="${formOpen ? 'super-user__btn--show' : 'super-user__btn--hide'}"
+        click.trigger="saveEdit()"
+        icon.bind="btns.save"
+      ></icon-button>
+      <icon-button
+        class="${formOpen ? 'super-user__btn--show' : 'super-user__btn--hide'}"
+        click.trigger="closeEdit()"
+        icon.bind="btns.close"
+      ></icon-button>
+      <icon-button
+        click.trigger="logOut()"
+        icon.bind="btns.logout"
+      ></icon-button>
+    </div>
   </div>
 </template>
