--- a/src/resources/elements/icon-button.html
+++ b/src/resources/elements/icon-button.html
@@ -1,5 +1,5 @@
 <template>
-  <button class="mdc-fab icon-button" aria-label="edit">
+  <button class="mdc-fab icon-button icon-button--${secondary}" aria-label="edit">
     <div class="mdc-fab__ripple"></div>
     <span class="mdc-fab__icon material-icons"><i class="icon-button__icon icon-button__icon--${icon}"></i></span>
   </button>
