--- a/src/resources/elements/super-user.html
+++ b/src/resources/elements/super-user.html
@@ -11,16 +11,19 @@
         class="${formOpen ?  'super-user__btn--hide': 'super-user__btn--show'}"
         click.trigger="startEdit()"
         icon.bind="btns.edit"
+        secondary.bind="btns.secondary"
       ></icon-button>
       <icon-button
         class="${formOpen ? 'super-user__btn--show' : 'super-user__btn--hide'}"
         click.trigger="saveEdit()"
         icon.bind="btns.save"
+        secondary.bind="btns.secondary"
       ></icon-button>
       <icon-button
         class="${formOpen ? 'super-user__btn--show' : 'super-user__btn--hide'}"
         click.trigger="closeEdit()"
         icon.bind="btns.close"
+        secondary.bind="btns.secondary"
       ></icon-button>
       <icon-button
         click.trigger="logOut()"
