--- a/src/subpages/impressum.html
+++ b/src/subpages/impressum.html
@@ -1,6 +1,11 @@
 <template>
+  <require from="resources/elements/edit-form"></require>
+
+  <edit-form contents.bind="contactInfos" area.bind="area"></edit-form>
   <div class="impressum">
     <h3 class="impressum__title">${contactInfoTitle}</h3>
-    <p class="impressum__text" repeat.for="contactInfo of contactInfos">${contactInfo.text}</p>
+    <p class="impressum__text" repeat.for="contactInfo of contactInfos">
+      ${contactInfo.text}
+    </p>
   </div>
 </template>
