--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -1,5 +1,8 @@
 <template>
+  <require from="resources/elements/edit-form"></require>
   <require from="resources/elements/product-card"></require>
+
+  <edit-form contents.bind="products" area.bind="area"></edit-form>
   <div class="products">
     <product-card
       repeat.for="product of products"
