--- a/src/resources/elements/product-card.html
+++ b/src/resources/elements/product-card.html
@@ -3,7 +3,7 @@
     <div class="product-card-header">
       <h3 class="product-card-header__title">${title}</h3>
       <div class="product-card-header__img">
-        <img src="${img}" alt="background-image" />
+        <img if.bind="img" src="${img}" alt="background-image" />
       </div>
     </div>
     <div class="product-card-body">
