--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -1,7 +1,9 @@
 <template>
   <require from="resources/elements/edit-form"></require>
   <require from="resources/elements/product-card"></require>
+  <require from="resources/elements/add-form"></require>
 
+  <add-form content.bind="newProduct" area.bind="area"></add-form>
   <edit-form contents.bind="products" area.bind="area"></edit-form>
   <div class="products">
     <product-card
