--- a/src/subpages/anfahrt.html
+++ b/src/subpages/anfahrt.html
@@ -1,5 +1,6 @@
 <template>
   <div class="anfahrt">
-   <iframe class="anfahrt__map" src="${mapSrc}" allowfullscreen></iframe>
+    <img src="/assets/images/anfahrt_placeholder.jpg" class="anfahrt__placeholder"></img>
+    <iframe class="anfahrt__map" src="${mapSrc}" allowfullscreen></iframe>
   </div>
 </template>
