--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,6 +4,7 @@
   <require from="resources/elements/button-standard"></require>
 
   <form class="login">
+    <h3 class="login__title">Die Anmeldedaten entnehmen Sie der Email, die Sie bei der Registrierung erhalten haben</h3>
     <input-text
       class="login__input"
       label.bind="inputName.label"
