--- a/src/resources/elements/text-area.html
+++ b/src/resources/elements/text-area.html
@@ -18,7 +18,7 @@
       <div class="mdc-notched-outline__notch">
         <label
           for="textarea"
-          class="mdc-floating-label ${prefilled ? 'mdc-floating-label--float-above' : ''}"
+          class="mdc-floating-label textarealabel ${prefilled ? 'mdc-floating-label--float-above' : ''}"
           >${label}</label
         >
       </div>
