--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,6 +2,11 @@
   <require from="resources/elements/input-text"></require>
   <require from="resources/elements/input-password"></require>
   <require from="resources/elements/button-standard"></require>
+  <require from="resources/elements/edit-form"></require>
+  <require from="resources/elements/add-form"></require>
+
+  <add-form></add-form>
+  <edit-form></edit-form>
 
   <form class="login">
     <h3 class="login__title">Die Anmeldedaten entnehmen Sie der Email, die Sie bei der Registrierung erhalten haben</h3>
