--- a/src/subpages/anfahrt.html
+++ b/src/subpages/anfahrt.html
@@ -1,5 +1,10 @@
 <template>
+  <require from="resources/elements/edit-form"></require>
+  <require from="resources/elements/add-form"></require>
+
+  <add-form></add-form>
+  <edit-form></edit-form>
   <div class="anfahrt">
     <iframe class="anfahrt__map" src="${mapSrc}" allowfullscreen></iframe>
   </div>
-</template> 
+</template>
