--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,4 +1,8 @@
 <template>
-  <img class="home-img" src="${img}" alt="background-image">
+  <require from="resources/elements/edit-form"></require>
+  <require from="resources/elements/add-form"></require>
+
+  <add-form></add-form>
+  <edit-form></edit-form>
+  <img class="home-img" src="${img}" alt="background-image" />
 </template>
- 
