--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,5 +4,5 @@
 
   <add-form></add-form>
   <edit-form></edit-form>
-  <img class="home-img" src="${img}" alt="background-image" />
+  <div class="home-img"></div>
 </template>
