link buttons i guess

--- a/src/resources/elements/header.html
+++ b/src/resources/elements/header.html
@@ -11,10 +11,12 @@
       <button-standard
         class="header__btn"
         text.bind="`Produkte`"
+        event.bind="`redirectToProducts`"
       ></button-standard>
       <button-standard
         class="header__btn"
         text.bind="`Kontakt`"
+       event.bind="`redirectToContact`"
       ></button-standard>
     </div>
   </div>
