--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,5 +4,9 @@
 
   <add-form></add-form>
   <edit-form></edit-form>
-  <div class="home-img"></div>
+  <div class="home">
+    <video class="home__video" autoplay muted preload="auto" loop ref="backgroundVideo">
+      <source  src="assets/images/video2.mp4" type="video/mp4">
+    </video>
+  </div>
 </template>
