--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,8 +5,17 @@
   <add-form></add-form>
   <edit-form></edit-form>
   <div class="home">
-    <video class="home__video" autoplay muted preload="auto" loop ref="backgroundVideo">
-      <source  src="assets/images/video2.mp4" type="video/mp4">
+    <video
+      class="home__video"
+      autoplay
+      muted
+      preload="auto"
+      loop
+      ref="backgroundVideo"
+    >
+      <source src="assets/images/video2.webm" type="video/ogg" />
+      <source src="assets/images/video2.ogv" type="video/ogg" />
+      <source src="assets/images/video2.mp4" type="video/mp4" />
     </video>
   </div>
 </template>
